gitdevtest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitdevtest-redirect
  namespace: gitdevtest
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/secure-backends: 'true'
    nginx.ingress.kubernetes.io/server-snippet: |
      location ^~ /packages/ {
          if ($http_user_agent !~* "git") {
              
              rewrite ^/packages/(.*) /tempbioc/$1;
              return 301 https://github.com$uri;
          }
          
          rewrite ^/packages/(.*) /tempbioc/$1 break;
          proxy_pass https://github.com;
          proxy_set_header Host github.com;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Forwarded-Proto $scheme;
          proxy_ssl_server_name on;
          proxy_buffer_size 8k;
          proxy_buffers 4 32k;
          proxy_busy_buffers_size 64k;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: gitdevtest.bioconductor.org
  tls:
    - hosts:
        - gitdevtest.bioconductor.org
      secretName: gitdevtest-bioconductor-org
